--- a/src/Video/video.css
+++ b/src/Video/video.css
@@ -14,7 +14,7 @@ section {
     
 }
 .row-2{
-    justify-content: space-between;
+    justify-content: space-evenly;
     margin-bottom: 1rem;
 }
 input {
@@ -27,32 +27,44 @@ input {
 .col{
     flex-basis: 25%;
     min-width:200px;
-    padding:2rem 1rem;
+    /* padding:2rem 1rem; */
     border-radius: 5px;
+    transition: all 500ms ease-in-out;
 }
-/* .col:hover {
-    box-shadow: 2px 2px 2px #888888;
-} */
-.col iframe {
-    width:100%;
-    height : 100%;
+.col:hover {
+    transform: scale(1.1);
+}
+.video-img{
+    height:10.5rem;
+}
+.video-img img{
+    width: 100%;
+    max-height: 100%;
+    min-width: 100%;
 }
 .video-text{
     display: flex;
     
 }
 .video-logo {
-    padding: 0.2rem 0.6rem;
+   /* flex-basis: 30%; */
 }
-.video-logo img {
-    border-radius: 50%;
+.logo-img {
+    /* border-radius: 50%; */
+    width: 100%;
+    height: 100%;
 }
 .video-details {
-    font-size: 0.9rem;
-    padding:0.2rem 0.4rem;
+    /* font-size: 0.9rem;
+    padding:0.2rem 0.4rem; */
+    flex-basis: 85%;
 }
 .video-details small {
     color: grey;
+}
+.ellipse{
+    flex-basis: 15%;
+    text-align: center;
 }
 .video-text div i {
     padding:0.5rem 0.3rem;
