--- a/src/Watchlater/watchLater.css
+++ b/src/Watchlater/watchLater.css
@@ -28,9 +28,14 @@ input {
     padding:2rem 1rem;
     border-radius: 5px;
 }
-.col iframe {
+.iframe {
     width:100%;
-    height : 100%;
+    height : 25vh;
+}
+.iframe > div >img{
+    width:100%;
+    max-height : 100%;
+    min-height: 100%;  
 }
 .video-text{
     display: flex;
